service-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: develop
  labels:
    env: dev
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: nginx:1.22.0
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: develop
  labels:
    app: www
    env: dev
spec:
  selector:
    app: api
  ports:
  - name: api
    protocol: TCP
    port: 80
    targetPort: 80
