service-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: develop
  labels:
    app: www
    env: dev
spec:
  containers:
  - name: nginx
    image: nginx:1.22.0
    ports:
      - containerPort: 80
        name: http-web-svc
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: develop
  labels:
    app: www
    env: dev
spec:
  selector:
    app: www
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: http-web-svc
